[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
futures = "0.3.15"
tokio = { version = "1.6.1", features = ["full"] }
tokio-stream = "0.1.6"
yahoo_finance_api = { version = "1.1" }
